--- a/myback/package.json
+++ b/myback/package.json
@@ -10,7 +10,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "request": "^2.88.2"
+    "moment": "^2.29.4",
+    "pg": "^8.11.0",
+    "request": "^2.88.2",
+    "sequelize": "^6.31.1",
+    "sqlite3": "^5.1.6"
   }
 }
