--- a/myback/package.json
+++ b/myback/package.json
@@ -9,10 +9,12 @@
   "author": "JijaLoqie",
   "license": "MIT",
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "parse": "^4.1.0",
     "pg": "^8.11.0",
     "request": "^2.88.2",
     "sequelize": "^6.31.1",
